--- a/Quinto/DAI/P2/views/base.html
+++ b/Quinto/DAI/P2/views/base.html
@@ -9,28 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="/css/styles.css" rel="stylesheet">
-    
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Tienda Online</a>
-        <!-- Formulario de búsqueda -->
-        <form class="form-inline my-2 my-lg-0" action="/buscar" method="POST">
-            <input class="form-control mr-sm-2" type="search" placeholder="Buscar productos" name="query" required>
-            <button class="btn btn-light my-2 my-sm-0" type="submit">Buscar</button>
-        </form>
-        <!-- Filtro de categorías -->
-        <form class="ml-3" action="/categoria" method="GET">
-            <select name="nombre" class="form-select" onchange="this.form.submit()">
-                <option value="">Todas las Categorías</option>
-                {% for categoria in categorias %}
-                    <option value="{{ categoria }}" {% if categoria == categoriaSeleccionada %}selected{% endif %}>{{ categoria }}</option>
-                {% endfor %}
-            </select>
-        </form>
-        <!-- Enlace al carrito -->
-        <a href="/carrito" class="btn btn-light ml-3 {% if carrito.length > 0 %} {% else %} disabled {% endif %}" role="button">            <i class="fas fa-shopping-cart"></i> Carrito
-        </a>
+        <div class="container">
+            <!-- Nombre de la tienda -->
+            <a class="navbar-brand" href="/portada">Tienda Online</a>
+
+            <!-- Menú de categorías en el centro -->
+            <form class="mx-auto" action="/categoria" method="GET">
+                <select name="nombre" class="form-select" onchange="this.form.submit()">
+                    <option value="">Todas las Categorías</option>
+                    {% for categoria in categorias %}
+                        <option value="{{ categoria }}" {% if categoria == categoriaSeleccionada %}selected{% endif %}>{{ categoria }}</option>
+                    {% endfor %}
+                </select>
+            </form>
+
+            <!-- Formulario de búsqueda a la derecha -->
+            <form class="d-flex" action="/buscar" method="POST">
+                <input class="form-control me-2" type="search" placeholder="Buscar productos" name="query" required>
+                <button class="btn btn-light" type="submit">Buscar</button>
+            </form>
+
+            <!-- Ícono de carrito -->
+            <a href="/carrito" class="btn btn-light ms-3 {% if carrito.length > 0 %} {% else %} disabled {% endif %}" role="button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-basket-fill" viewBox="0 0 16 16">
+                    <path d="M5.071 1.243a.5.5 0 0 1 .858.514L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 6h1.717zM3.5 10.5a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0z"/>
+                </svg>
+            </a>
+        </div>
     </header>      
     <main class="container mt-4">
         {% block content %}{% endblock %}
