--- a/Quinto/DAI/P2/views/detalle_producto.html
+++ b/Quinto/DAI/P2/views/detalle_producto.html
@@ -2,12 +2,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ producto.titulo }}</h1>
-<img src="{{ producto.image }}" alt="{{ producto.title }}" class="img-fluid">
-<p><strong>Descripción:</strong> {{ producto.description }}</p>
-<p><strong>Precio:</strong> {{ producto.price }} $</p>
-<form action="/carrito/agregar" method="POST">
-    <input type="hidden" name="productoId" value="{{ producto._id }}">
-    <button type="submit" class="btn btn-success">Añadir al Carrito</button>
-</form>
+<div class="container mt-4">
+    <div class="row">
+        <!-- Columna de la imagen del producto -->
+        <div class="col-md-5">
+            <img src="{{ producto.image }}" alt="{{ producto.title }}" class="img-fluid rounded" style="max-width: 100%; max-height: 400px; object-fit: contain;">
+        </div>
+        <!-- Columna de detalles del producto -->
+        <div class="col-md-7">
+            <h1>{{ producto.title }}</h1>
+            <p><strong>Descripción:</strong> {{ producto.description }}</p>
+            <p><strong>Precio:</strong> <span class="text-success">{{ producto.price }} $</span></p>
+            <form action="/carrito/agregar" method="POST">
+                <input type="hidden" name="productoId" value="{{ producto._id }}">
+                <button type="submit" class="btn btn-success btn-lg mt-3">Añadir al Carrito</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
