--- a/Quinto/DAI/P2/views/portada.html
+++ b/Quinto/DAI/P2/views/portada.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Productos Destacados</h1>
+<h1>{{ titulo }}</h1>
 <div class="row">
     {% for producto in productos %}
         <div class="col-md-3">
