Practica 3.1 - carrito sin asociar a user

--- a/Quinto/DAI/P3/views/detalle_producto.html
+++ b/Quinto/DAI/P3/views/detalle_producto.html
@@ -13,10 +13,22 @@
             <h1>{{ producto.title }}</h1>
             <p><strong>Descripción:</strong> {{ producto.description }}</p>
             <p><strong>Precio:</strong> <span class="text-success">{{ producto.price }} $</span></p>
+            {% if admin %}
+            <form action="/productos/{{producto._id}}" method="POST">
+                <label for="title">Nuevo Título:</label>
+                <input type="text" name="title" value="{{producto.title}}" required>
+            
+                <label for="price">Nuevo Precio:</label>
+                <input type="number" name="price" value="{{producto.price}}" required>
+            
+                <button type="submit">Guardar cambios</button>
+            </form>
+            {% else %}
             <form action="/carrito/agregar" method="POST">
                 <input type="hidden" name="productoId" value="{{ producto._id }}">
                 <button type="submit" class="btn btn-success btn-lg mt-3">Añadir al Carrito</button>
             </form>
+            {% endif %}
         </div>
     </div>
 </div>
