--- a/Quinto/DAI/P3/views/login.html
+++ b/Quinto/DAI/P3/views/login.html
@@ -4,6 +4,9 @@
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="card shadow p-4" style="max-width: 400px; width: 100%;">
         <h2 class="text-center mb-4">Iniciar Sesión</h2>
+        <!-- {% if error %}
+            <div class="alert alert-danger"> {{ error }}</div>
+        {% endif %}  -->
         <form action="/login" method="POST">
             <div class="mb-3">
                 <label for="username" class="form-label">Usuario</label>
